# CRC_Update

./: CMakeLists.txt  README.md  build.bat  clean.bat
Builds/: CMakeCache.txt  Makefile  cmake_install.cmake
Builds/SParser_lib/: Makefile  cmake_install.cmake
Builds/Std_lib/: Makefile  cmake_install.cmake
Builds/crc_lib/: Makefile  cmake_install.cmake
GUI/: ReadMe.txt  config.glade  example.c  gui.xml
SParser_lib/: CMakeLists.txt
SParser_lib/inc/: SParser.h
SParser_lib/src/: SParser.c
Std_lib/: CMakeLists.txt
Std_lib/inc/: Std_Types.h
crc_lib/: CMakeLists.txt
crc_lib/inc/: CRC.h  Crc_Cfg.h  Crc_Types.h
crc_lib/src/: CRC.c
